Added nextjs w/ typescript

--- a/ui/index.html
+++ b/ui/index.html
@@ -12,7 +12,7 @@
     console.log("Attempting Websocket conn...");
     socket.onopen = () => {
       console.log("Connected :D");
-      socket.send("Hello");
+      socket.send(JSON.stringify({ example: 'asdasd' }));
     };
 
     socket.onclose = (event) => {
